--- a/Coding Project/client/src/components/SpaceTile/SpaceTile.css
+++ b/Coding Project/client/src/components/SpaceTile/SpaceTile.css
@@ -2,26 +2,40 @@
     background: #F2F2F2;
     overflow: hidden;
     font-family: 'poppins', sans-serif;
-    padding: 15px;
+    width : 20rem;
+    height : 15rem;
+    padding : 1rem;
+    position : relative;
   }
+
   
   .tile-rating {
     display: inline-block; 
     margin-left: 1rem;
   }
 
+  .heart-icon {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 10px;
+  }
+
   .spacetile-image {
     width: 100%;
     height: 60%;
-    
     display: flex;
     justify-content: center;
     align-items: center;
     overflow: hidden;
+    left: 0; 
+    top: 0;
 }
 
 .spacetile-image img {
     flex-shrink: 0;
     min-width: 100%;
-    min-height: 100%
+    min-height: 100%;
+    left: 0; 
+    top: 0;
 }
